# ReadSierraChartData.cpp

./: CMakeLists.txt  README.md
ReadSierraChartScid/: CMakeLists.txt  ReadSierraChartScid.cpp  ReadSierraChartScid.h  ZLibCompressor.cpp  ZLibCompressor.h
ReadSierraChartScid/SierraChartFiles/: ACSILCustomChartBars.h  ACSILDepthBars.h  IntradayRecord.h  SCString.h  SCSymbolData.h  VAPContainer.h  sccolors.h  scconstants.h  scdatetime.h  scstructures.h  sierrachart.h
ReadSierraChartScid/zlib/: adler32.c  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  gzguts.h  inftrees.c  inftrees.h  trees.c  trees.h  zutil.c  zutil.h
